<resources>
    <string name="cometchat_app_name" translatable="true">UI KIT</string>
    <string name="cometchat_shared_image_transition" translatable="false">shared_image_transition_%1$d</string>
    <string name="cometchat_user" translatable="true">user</string>
    <string name="cometchat_group" translatable="true">group</string>
    <string name="cometchat_conversation" translatable="true">conversation</string>
    <string name="cometchat_reply_lowercase" translatable="true">reply</string>
    <string name="cometchat_call" translatable="true">Call</string>
    <string name="cometchat_sticker_lowercase" translatable="true">sticker</string>
    <string name="cometchat_message" translatable="true">Write a message</string>
    <string name="cometchat_start_conv_hint" translatable="true">Tap to start conversation</string>
    <string name="cometchat_admin" translatable="true">Admin</string>
    <string name="cometchat_moderator" translatable="true">Moderator</string>
    <string name="cometchat_member" translatable="true">Member</string>
    <string name="cometchat_join" translatable="true">Join</string>
    <string name="cometchat_camera_perm" translatable="true">Please grant camera permission from app setting</string>
    <string name="cometchat_storage_perm" translatable="true">Please grant storage permission from app setting</string>
    <string name="cometchat_file_not_exist" translatable="true">File doesn\'t exists</string>
    <string name="cometchat_ended" translatable="true">Ended</string>
    <string name="cometchat_outgoing" translatable="true">Outgoing</string>
    <string name="cometchat_incoming" translatable="true">Incoming</string>
    <string name="cometchat_missed_call" translatable="true">Missed</string>
    <string name="cometchat_cancel_call" translatable="true">Cancelled</string>
    <string name="cometchat_rejected_call" translatable="true">Rejected</string>
    <string name="cometchat_busy_call" translatable="true">Busy</string>
    <string name="cometchat_you" translatable="true">You</string>
    <string name="cometchat_edit" translatable="true">Edit</string>
    <string name="cometchat_delete" translatable="true">Delete</string>
    <string name="cometchat_share" translatable="true">Share</string>
    <string name="cometchat_copy" translatable="true">Copy</string>
    <string name="cometchat_translate" translatable="true">Translate</string>
    <string name="cometchat_message_privately" translatable="true">Message Privately</string>
    <string name="cometchat_reply_uppercase" translatable="true">Reply In Thread</string>
    <string name="cometchat_info" translatable="true">"Info"</string>
    <string name="cometchat_online" translatable="true">Online</string>
    <string name="cometchat_offline" translatable="true">Offline</string>
    <string name="cometchat_attach_image" translatable="true">Attach Image</string>
    <string name="cometchat_attach_video" translatable="true">Attach Video</string>
    <string name="cometchat_poll" translatable="true">Poll</string>
    <string name="cometchat_camera" translatable="true">Camera</string>
    <string name="cometchat_yes" translatable="true">Yes</string>
    <string name="cometchat_shared_sticker" translatable="true">Shared a Sticker</string>
    <string name="cometchat_attach_audio" translatable="true">Attach Audio</string>
    <string name="cometchat_attach_document" translatable="true">Attach Document</string>
    <string name="cometchat_no" translatable="true">No</string>
    <string name="cometchat_question" translatable="true">Question</string>
    <string name="cometchat_collaborative_whiteboard" translatable="true">Collaborative Whiteboard</string>
    <string name="cometchat_collaborative_doc" translatable="true">Collaborative Document</string>
    <string name="cometchat_yesterday" translatable="true">Yesterday</string>
    <string name="cometchat_ban" translatable="true">Ban</string>
    <string name="cometchat_document" translatable="true">Document</string>
    <string name="cometchat_polls" translatable="true">Polls</string>
    <string name="cometchat_sticker_uppercase" translatable="true">Sticker</string>
    <string name="cometchat_custom_message_whiteboard" translatable="true">Whiteboard</string>
    <string name="cometchat_error" translatable="true">Error</string>
    <string name="cometchat_added" translatable="true">added</string>
    <string name="cometchat_kicked_by" translatable="true">kicked</string>
    <string name="cometchat_left" translatable="true">left</string>
    <string name="cometchat_joined" translatable="true">joined</string>
    <string name="cometchat_unban" translatable="true">Unban</string>
    <string name="cometchat_made" translatable="true">made</string>
    <string name="cometchat_participant" translatable="true">Participant</string>
    <string name="cometchat_translation_error" translatable="true">Selected language for translation is similar to the language of original message</string>
    <string name="cometchat_group_call" translatable="true">Group Call</string>
    <string name="cometchat_updating" translatable="true">Updating</string>
    <string name="cometchat_chats" translatable="true">Chats</string>
    <string name="cometchat_downloading" translatable="true">Downloading</string>
    <string name="cometchat_today" translatable="true">Today</string>
    <string name="cometchat_replies" translatable="true">Replies</string>
    <string name="cometchat_new_message" translatable="true">new message</string>
    <string name="cometchat_new_messages" translatable="true">" new messages"</string>
    <string name="cometchat_channel_description" translatable="true">Channel Description</string>
    <string name="cometchat_action_item" translatable="true">action_item</string>
    <string name="cometchat_try_again" translatable="true">Try again</string>
    <string name="cometchat_something_went_wrong" translatable="true">Something went wrong.</string>
    <string name="cometchat_transfer_ownership" translatable="true">Transfer Ownership</string>
    <string name="cometchat_add_members" translatable="true">Add Members</string>
    <string name="cometchat_owner" translatable="true">Owner</string>
    <string name="cometchat_banned" translatable="true">Banned</string>
    <string name="cometchat_calling" translatable="true">calling</string>
    <string name="cometchat_accepted" translatable="true">accepted</string>
    <string name="cometchat_unanswered" translatable="true">unanswered</string>
    <string name="cometchat_message_receipt" translatable="true">Message Receipt</string>
    <string name="cometchat_file_download_failed" translatable="true">File download failed.</string>
    <string name="cometchat_suggest_a_reply" translatable="true">Suggest a reply</string>
    <string name="cometchat_enter_a_text" translatable="true">Enter a text</string>
    <string name="cometchat_form_completion_message" translatable="true">Thank you for filling out the form.</string>
    <string name="cometchat_conversation_summary" translatable="true">Conversation Summary</string>
    <string name="cometchat_generate_summary" translatable="true">Generate a summary</string>
    <string name="cometchat_more_times" translatable="true">More times</string>
    <string name="cometchat_select_a_day" translatable="true">Select a Day</string>
    <string name="cometchat_meeting_scheduled" translatable="true">Your meeting has been scheduled.</string>
    <string name="cometchat_meet_with" translatable="true">"Meet With "</string>
    <string name="cometchat_min_meeting" translatable="true">min meeting</string>
    <string name="cometchat_select_a_time" translatable="true">Select a Time</string>
    <string name="cometchat_no_time_slots_available" translatable="true">No time slot available for this date. Please try another date.</string>
    <string name="cometchat_book_new_slot" translatable="true">Book new slot</string>
    <string name="cometchat_something_went_wrong_please_try_again" translatable="true">Something went wrong. Please try again.</string>
    <string name="cometchat_time_slot_no_longer_available_please_choose_another" translatable="true">Time slot no longer available. Please choose another.</string>
    <string name="cometchat_no_quick_time_slots_available" translatable="true">No Time slots available.</string>
    <string name="cometchat_tag_item" translatable="true">Tag Item</string>
    <string name="cometchat_you_can_mention_up_to" translatable="true">You can mention up to</string>
    <string name="cometchat_time_at_a_time" translatable="true">times at a time</string>
    <string name="cometchat_reply" translatable="true">Reply</string>
    <string name="cometchat_all" translatable="true">All</string>
    <string name="cometchat_tap_to_remove" translatable="true">Tap to remove</string>
    <string name="cometchat_avatar" translatable="true">CometChat Avatar</string>
    <string name="cometchat_unread_message_count_max" translatable="true">999+</string>
    <string name="cometchat_empty_conversations_title" translatable="true">No Conversations Yet</string>
    <string name="cometchat_empty_conversations_subtitle" translatable="true">Start a new chat or invite others to join the\nconversation.</string>
    <string name="cometchat_error_conversations_title" translatable="true">Oops!</string>
    <string name="cometchat_error_conversations_subtitle" translatable="true">Looks like something went wrong.\nPlease try again.</string>
    <string name="cometchat_typing" translatable="true">Typing…</string>
    <string name="cometchat_is_typing" translatable="true">is typing…</string>
    <string name="cometchat_message_image" translatable="true">Photo</string>
    <string name="cometchat_message_video" translatable="true">Video</string>
    <string name="cometchat_message_audio" translatable="true">Audio</string>
    <string name="cometchat_message_sticker" translatable="true">Sticker</string>
    <string name="cometchat_message_gif" translatable="true">GIF</string>
    <string name="cometchat_message_poll" translatable="true">Poll</string>
    <string name="cometchat_message_document" translatable="true">Document</string>
    <string name="cometchat_message_location" translatable="true">Location</string>
    <string name="cometchat_message_collaborative_whiteboard" translatable="true">Collaborative Whiteboard</string>
    <string name="cometchat_message_collaborative_document" translatable="true">Collaborative Document</string>
    <string name="cometchat_conversation_delete_message_title" translatable="true">Delete this conversation?</string>
    <string name="cometchat_cancel" translatable="true">Cancel</string>
    <string name="cometchat_save" translatable="true">Save</string>
    <string name="cometchat_send" translatable="true">Send</string>
    <string name="cometchat_bold" translatable="true">Bold</string>
    <string name="cometchat_italic" translatable="true">Italic</string>
    <string name="cometchat_strikethrough" translatable="true">Strikethrough</string>
    <string name="cometchat_underline" translatable="true">Underline</string>
    <string name="cometchat_inline_code" translatable="true">Inline Code</string>
    <string name="cometchat_code_block" translatable="true">Code Block</string>
    <string name="cometchat_link" translatable="true">Link</string>
    <string name="cometchat_bullet_list" translatable="true">Bullet List</string>
    <string name="cometchat_numbered_list" translatable="true">Numbered List</string>
    <string name="cometchat_blockquote" translatable="true">Blockquote</string>
    <string name="cometchat_close" translatable="true">Close</string>
    <string name="cometchat_add_link" translatable="true">Add Link</string>
    <string name="cometchat_text" translatable="true">Text</string>
    <string name="cometchat_play" translatable="true">Play</string>
    <string name="cometchat_pause" translatable="true">Pause</string>
</resources>